# obs-blueprint

./: CMakeLists.txt  README.md  ffmpeg-err2str.c  ffmpeg-err2str.h  install_opencv.sh  obs-blueprint-source.c  obs-blueprint.c  opencv-conf.h
Core/: frame-format.h  obs-blueprint-c-interface.cpp  obs-blueprint-c-interface.h  obs-blueprint-connector.cpp  obs-blueprint-connector.h  obs-blueprint-graph.cpp  obs-blueprint-graph.h  obs-blueprint-node.cpp  obs-blueprint-node.h  obs-blueprint-pin.h  obs-blueprint-variable.h  pin-type.h
GUI/: context-menu-helper.h  gui-connector.cpp  gui-connector.h  gui-graph.cpp  gui-graph.h  gui-handler.cpp  gui-handler.h  gui-node.cpp  gui-node.h  gui-pin.cpp  gui-pin.h  gui-variables-widget.cpp  gui-variables-widget.h  obs-graphics-connector.cpp  obs-graphics-connector.h  obs-graphics-main-window.cpp  obs-graphics-main-window.h  obs-graphics-node.cpp  obs-graphics-node.h  obs-graphics-pin-input-field.cpp  obs-graphics-pin-input-field.h  obs-graphics-pin.cpp  obs-graphics-pin.h  obs-graphics-scene.cpp  obs-graphics-scene.h  obs-graphics-type-field.cpp  obs-graphics-type-field.h  obs-graphics-view.cpp  obs-graphics-view.h
GUI/Details/: gui-details-widget.cpp  gui-details-widget.h  obs-graphics-node-details.cpp  obs-graphics-node-details.h  obs-graphics-pin-details.cpp  obs-graphics-pin-details.h  obs-graphics-variable-details.cpp  obs-graphics-variable-details.h
GUI/Variables/: gui-variables-widget.cpp  gui-variables-widget.h  obs-graphics-variables-list.cpp  obs-graphics-variables-list.h
Helpers/: enum-to-string.h  global-logger.cpp  global-logger.h  obs-blueprint-factory.cpp  obs-blueprint-factory.h  pin-helper.cpp  pin-helper.h  wstring-converter.cpp  wstring-converter.h
Nodes/: node-color-source.cpp  node-color-source.h  node-sinus-time.cpp  node-sinus-time.h  node-temp-test.h
Nodes/FloatHelpers/: node-float-abs.h  node-float-to-int.h
Nodes/Numbers/Float/: node-float-abs.h  node-float-to-int.h
Nodes/Numbers/Int/: node-int-to-float.h
Nodes/Variables/: node-variable-get.cpp  node-variable-get.h
Nodes/Video/: node-camera-source.cpp  node-camera-source.h  node-color-source.cpp  node-color-source.h  node-image-souce.cpp  node-image-souce.h  node-image-source2.cpp  node-image-source2.h  node-video-source.cpp  node-video-source.h
Nodes/Video/Transforms/: node-video-layer.cpp  node-video-layer.h
Nodes/Video/Utilities/: node-video-break.h
Nodes/Waves/: node-sinus-time.cpp  node-sinus-time.h
Structs/: graphics-options.cpp  graphics-options.h  multicast-delegate.h  obs-frame.cpp  obs-frame.h  pixel.h  video-frame.h
data/locale/: en-US.ini
doc/: full_install.md
